<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DashboardActivity">


    <include
        android:id="@+id/included_toolbar"
        layout="@layout/toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/included_toolbar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/userProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:layout_weight="1"
                android:padding="5sp"
                app:cardCornerRadius="8sp"
                app:cardElevation="5sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/user" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:paddingTop="12sp"
                        android:paddingBottom="5sp"
                        android:text="@string/profile"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/teacherProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:layout_weight="1"
                android:padding="5sp"
                app:cardCornerRadius="8sp"
                app:cardElevation="5sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@drawable/user" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:paddingTop="12sp"
                        android:paddingBottom="5sp"
                        android:text="@string/teacher_profile"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/notes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:layout_weight="1"
                android:padding="5sp"
                app:cardCornerRadius="8sp"
                app:cardElevation="5sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100sp"
                        android:layout_marginTop="5sp"
                        android:src="@drawable/pencil" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:paddingTop="12sp"
                        android:paddingBottom="5sp"
                        android:text="@string/notes"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/chatBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:layout_weight="1"
                android:padding="5sp"
                app:cardCornerRadius="8sp"
                app:cardElevation="5sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="5sp"
                        android:src="@drawable/bubble_chat" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:paddingTop="12sp"
                        android:paddingBottom="5sp"
                        android:text="@string/chat_box"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/session"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:layout_weight="1"
                android:padding="5sp"
                app:cardCornerRadius="8sp"
                app:cardElevation="5sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="5sp"
                        android:src="@drawable/videoconference" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:paddingTop="12sp"
                        android:paddingBottom="5sp"
                        android:text="@string/online_session"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:layout_weight="1"
                android:padding="5sp"
                app:cardCornerRadius="8sp"
                app:cardElevation="5sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="5sp"
                        android:src="@drawable/logout" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:paddingTop="12sp"
                        android:paddingBottom="5sp"
                        android:text="Logout"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>